--- a/src/components/skill.css
+++ b/src/components/skill.css
@@ -3,7 +3,7 @@
 }
 
 .skills {
-  padding-left: 100px;
+  padding-left: 50px;
 }
 
 .skill-nav {
@@ -31,12 +31,69 @@
 }
 
 .skill {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-areas: "react  html  css  js  redux"
+                        "node git postman mongo heroku"  
+                        "vercel material a a a "                          ;
+  gap: 2%;
+}
+#postman{
+grid-area: postman;
+}
+#mongo{
+grid-area: mongo;
+}
+#material{
+  grid-area: material;
+}
+#vercel{
+  grid-area: vercel;
+}
+#heroku{
+  grid-area: heroku;
+}
+#git{
+  grid-area: git;
+}
+#redux{
+  grid-area: redux;
+}
+#html{
+  grid-area: html;
+}
+#css{
+  grid-area: css;
+}
+#js{
+  grid-area: js;
+}
+#node{
+  grid-area: node;
+}
+#react{
+  grid-area: react;
+  
+}
+.skill >div>img{
+  width:100%;
+  height: 75%;
+  object-fit: contain;
+  /* border: 1px solid red; */
+ 
+}
+.skill>div{
+  /* border: 2px solid #00cf5d; */
+  height: 100px;
+  margin-bottom: 13%;
+  width:85%
 }
 
-.skill > * {
-  flex: 1 1 calc(100% / 2 - 30px);
+.skill > div >h4 {
+  text-align: center;
+} 
+
+.skill {
+  /* border: 2px solid red; */
 }
 
 .skill .card {
@@ -46,6 +103,7 @@
   padding-bottom: 35px;
   margin: 15px;
   border-radius: 4px;
+  border: 2px solid green;
 }
 
 .skill .card h4 {
@@ -93,8 +151,11 @@
 }
 
 @media only screen and (max-width: 768px) {
-  .skills {
-    padding-left: 0;
+  .skills>* {
+    /* display: grid; */
+    grid-template-areas: "react  html  css  js"
+                        " redux node git postman "  
+                        " heroku mongo vercel material " ;
   }
 
   .skill-nav {
@@ -107,9 +168,7 @@
   }
 
   .skill > * {
-    flex: 1 1 100%;
-    margin-left: 0;
-    margin-right: 0;
+   
   }
 
   .skill .card {
@@ -136,4 +195,15 @@
   .skill .card {
     margin-bottom: 15px;
   }
+  .skills>* {
+    /* display: grid; */
+    grid-template-areas: "react  html "
+                        "  css js " 
+                        "redux node" 
+                        "git postman "  
+                        " heroku mongo" 
+                         " vercel material " ;
+        margin-bottom: 20%;
+  }
+ 
 }
